# ConvEm

./: ConvEm.cabal  DDChat.cabal  Glob.cabal  LICENSE  README.md  TODO.md  build.py  build.sh  stack.yaml
app/: Main.hs
mysql/: schema.sql
scripts/: build.sh  profile.sh
src/: Forms.hs  GUI.hs  Init.hs  Utils.hs
src/GUI/: General.hs  Login.hs  Main.hs  Recovery.hs  Reg.hs
src/GUI/Elements/: Button.hs  Buttons.hs  Input.hs
src/GUI/static/css/: fonts.css  login.css
src/Graphics/: Form.hs  Frames.hs  General.hs
src/Graphics/Data/: Dialogs.hs  Forms.hs  Frames.hs  Selectors.hs
src/Graphics/Frames/: Entry.hs
src/Inline/: StyleSheet.hs
src/Logic/: General.hs  Login.hs  Recovery.hs
src/Login/: General.hs  Logic.hs  Recovery.hs  SignIn.hs  Types.hs
src/Login/Logic/: Auth.hs  General.hs
src/Main/Login/: Auth.hs  Decls.hs  Forms.hs  GUI.hs  Logic.hs  Manager.hs
src/Main/Login/GUI/: Auth.hs  Forms.hs  General.hs
src/Main/Login/Logic/: Auth.hs  General.hs
src/NTypes/: Action.hs  Result.hs
src/Server/: General.hs  Init.hs  Login.hs
src/Server/Login/: Auth.hs  SignIn.hs
src/ServerOld/: General.hs  Login.hs
src/Sugar/: GenFlagAssociated.hs
src/Templates/: Build.hs  GenFlagAssociated.hs  Inline.hs
src/Types/: Client.hs  DBEntities.hs  Data.hs  Elems.hs  FRAMES.md  Frames.hs  General.hs  Hierarchy.hs  NetworkHandler.hs  Results.hs  Server.hs  ServerAction.hs
static/css/: conn-err.css  fonts.css  general.css  header.css  loading.css  login.css  no-conn-box.css
static/html/: auth.html  conn-err.html  loading.html  login-template.html  no-conn-box.html
