name:                ConvEm
version:             0.1.0.0
synopsis:            Multifunctional chat-manager.
description:
homepage:            https://github.com/errfrom/ConvEm#readme
license:             GPL-3.0
license-file:        LICENSE
author:              Ivanov Dmitry
maintainer:          errfrom@yandex.ru
copyright:           2017 ConvEm
category:            App
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Init
  other-modules:       Graphics.Data.Forms
                     , Graphics.Data.Dialogs
                     , Graphics.Data.Selectors
                     , Graphics.Form
                     , Graphics.General

                     , Inline.StyleSheet

                     , Login.Types
                     , Login.General
                     , Login.Logic

                     , Server.Login.SignIn
                     , Server.General

                     , Types.General
                     , Types.ServerAction
                     , Types.DBEntities

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , word8
                     , process
                     , template-haskell
                     , webkit
                     , gtk
                     , glib
                     , regex-compat
                     , MissingH
                     , syb-with-class
                     , network
                     , bcrypt
                     , mysql-simple
                     , mtl
                     , data-default
                     , binary
                     , html-parse
                     , text
                     , filepath
                     , transformers
                     , esqueleto
                     , persistent
                     , persistent-template
                     , persistent-mysql
                     , monad-control
                     , monad-logger
                     , resourcet
  default-language:    Haskell2010

executable ConvEm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
                       -fno-warn-name-shadowing
  build-depends:       base
                     , ConvEm
  default-language:    Haskell2010

test-suite ConvEm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ConvEm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/errfrom/ConvEm
