name:                DDChat
version:             0.1.0.0
synopsis:            Haskell based chat-app.
description:         Multiplatform, fast, secure and intuitive chat-app.
homepage:            https://github.com/errfrom/DDChat#readme
license:             GPL-3.0
license-file:        LICENSE.txt
author:              Ivanov Dmitry
maintainer:          errfrom@yandex.ru
copyright:           2017 Diregd
category:            App
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Init
  other-modules:       Utils
                     , Main.Login.GUI.Forms
                     , Main.Login.GUI.Auth
                     , Main.Login.GUI.General
                     , Main.Login.Logic.Auth
                     , Main.Login.Logic.General
                     , Server.General
                     , Server.Login.Auth
                     , Templates.GenFlagAssociated
                     , Types.Data
                     , Types.General
                     , Types.Results
                     , Types.Server
                     , Types.Client
  build-depends:       base >= 4.7 && < 5
                     , threepenny-gui
                     , gtk
                     , webkit
                     , glib
                     , network
                     , process
                     , filepath
                     , directory
                     , bytestring
                     , mysql-simple
                     , bcrypt
                     , word8
                     , template-haskell
                     , syb-with-class
                     , transformers
                     , HaskellNet-SSL
  default-language:    Haskell2010

executable DDChat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DDChat
                     , directory
                     , filepath
  default-language:    Haskell2010

executable Builder
  hs-source-dirs:      build
  main-is:             Build.hs
  build-depends:       base
                     , regex-posix
                     , text
                     , directory
                     , filepath
  default-language:    Haskell2010

test-suite DDChat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DDChat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/errfrom/DDChat
