name:                Glob
version:             0.1.0.0
synopsis:            Haskell based chat-app.
description:         Multiplatform, fast, secure and intuitive chat-app.
homepage:            https://github.com/errfrom/Glob#readme
license:             GPL-3.0
license-file:        LICENSE
author:              Ivanov Dmitry
maintainer:          errfrom@yandex.ru
copyright:           2017 Glob
category:            App
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Init
  other-modules:       Graphics.Data.Forms
                     , Graphics.Data.Selectors
                     , Graphics.Form
                     , Graphics.General

                     , Inline.StyleSheet

                     , Login.SignIn
                     , Login.General

                     , Server.Login.SignIn
                     , Server.General

                     , Types.General
                     , Types.ServerAction
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , word8
                     , process
                     , template-haskell
                     , webkit
                     , gtk
                     , glib
                     , regex-compat
                     , MissingH
                     , syb-with-class
                     , network
                     , bcrypt
                     , mysql-simple
                     , mtl
                     , data-default
                     , binary
                     , html-parse
                     , text
                     , filepath
                     , transformers
  default-language:    Haskell2010

executable Glob-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
                       -fno-warn-name-shadowing
  build-depends:       base
                     , Glob
  default-language:    Haskell2010

test-suite Glob-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Glob
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/errfrom/Glob
